objects/EUR_CRM_Brand__c.object
<CustomObject>
    <description>PREU Data Model</description>
    <fields>
        <fullName>EUR_CRM_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_BG_Competitor__c</fullName>
        <description>This is a new picklist field of Competitor created for EUR BG.</description>
        <label>BG Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bacardi Limited</fullName>
                </value>
                <value>
                    <fullName>Campari Group</fullName>
                </value>
                <value>
                    <fullName>LVMH</fullName>
                </value>
                <value>
                    <fullName>Diageo</fullName>
                </value>
                <value>
                    <fullName>William Grant &amp; Sons</fullName>
                </value>
                <value>
                    <fullName>Beam Suntory</fullName>
                </value>
                <value>
                    <fullName>Edrington</fullName>
                </value>
                <value>
                    <fullName>Casa Cuervo</fullName>
                </value>
                <value>
                    <fullName>Brown-Forman</fullName>
                </value>
                <value>
                    <fullName>Roust</fullName>
                </value>
                <value>
                    <fullName>Ploumaris SA</fullName>
                </value>
                <value>
                    <fullName>Remy Cointreau</fullName>
                </value>
                <value>
                    <fullName>Sierra Unidas</fullName>
                </value>
                <value>
                    <fullName>Belvedere Group</fullName>
                </value>
                <value>
                    <fullName>Tsantali</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand_Code__c</fullName>
        <label>Brand Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand_Description__c</fullName>
        <label>Brand Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand_Image__c</fullName>
        <formula>IF( RecordType.Name = &quot;EUR DE Brand&quot;,
IMAGE( EUR_CRM_Brand_Image_url__c , &quot;Bild nicht vorhanden&quot;, 200, 200),
IMAGE( EUR_CRM_Brand_Image_url__c , &quot;Image not available&quot;, 200, 200)
)</formula>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand_Image_url__c</fullName>
        <label>Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand_Priority__c</fullName>
        <description>Financial evaluation of a Brand.</description>
        <label>Brand Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chamonix</fullName>
                </value>
                <value>
                    <fullName>Core</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Seeding</fullName>
                </value>
                <value>
                    <fullName>Star</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Category_Name__c</fullName>
        <formula>EUR_CRM_Category__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>EUR_CRM_Category__c</referenceTo>
        <relationshipName>Brand</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Competitor__c</fullName>
        <description>Competitor&apos;s name.</description>
        <label>Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Diageo</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>Maxxium (Denview)</fullName>
                </value>
                <value>
                    <fullName>Brown Froman (Coca-Cola)</fullName>
                </value>
                <value>
                    <fullName>LVMN (Whitehall)</fullName>
                </value>
                <value>
                    <fullName>Synergy</fullName>
                </value>
                <value>
                    <fullName>Luding</fullName>
                </value>
                <value>
                    <fullName>Roust</fullName>
                </value>
                <value>
                    <fullName>Campari</fullName>
                </value>
                <value>
                    <fullName>Grand Sud Import</fullName>
                </value>
                <value>
                    <fullName>Drinks</fullName>
                </value>
                <value>
                    <fullName>Ebertec</fullName>
                </value>
                <value>
                    <fullName>Food and Goods</fullName>
                </value>
                <value>
                    <fullName>Bourchanin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Contributive_Margin_Brand__c</fullName>
        <label>Contributive Margin / Brand</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Country_Code__c</fullName>
        <formula>IF(CONTAINS(RecordType.DeveloperName, &quot;PRT&quot;), &quot;PRT&quot;, RIGHT(LEFT(RecordType.DeveloperName,6),2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Enable_Account_Volume_Tracking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Account Volume Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_English_Name__c</fullName>
        <label>English Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_CRM_Is_Ancillary_Product_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ancillary Product Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Is_Competitor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Competitor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Mobile_App_Display_Order__c</fullName>
        <label>Mobile App Display Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Other_Brands__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Brands</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_PIM_ID__c</fullName>
        <label>PIM ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_PRN_Brand_Group_ID__c</fullName>
        <label>PRN Brand Group ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_PRN_Brand_Group_Name__c</fullName>
        <label>PRN Brand Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Sub_Category__c</fullName>
        <label>Sub Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>Ultra-Premium</fullName>
                </value>
                <value>
                    <fullName>Super Premium</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Supplier__c</fullName>
        <description>Newly created for PR BG</description>
        <label>Supplier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Supplier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Brand (EU)</label>
    <listViews>
        <fullName>All_AO_Brands</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Brand_Code__c</columns>
        <columns>EUR_CRM_Category_Name__c</columns>
        <columns>EUR_CRM_Is_Competitor__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>EUR_CRM_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Brand__c.EUR_AO_Brand</value>
        </filters>
        <label>All AO Brands</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_AO</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_CH_Brands</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Brand_Code__c</columns>
        <columns>EUR_CRM_Category_Name__c</columns>
        <columns>EUR_CRM_Is_Competitor__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Brand__c.EUR_CH_Brand</value>
        </filters>
        <label>All CH Brands</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_CH</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_FI_Brands</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Category__c</columns>
        <columns>EUR_CRM_Contributive_Margin_Brand__c</columns>
        <columns>EUR_CRM_Is_Competitor__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Brand_Image_url__c</columns>
        <columns>EUR_CRM_English_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Active__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Brand__c.EUR_FI_Brand</value>
        </filters>
        <label>All FI Brands</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_FI</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_KE_Brands</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Is_Competitor__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Brand__c.EUR_KE_Brand</value>
        </filters>
        <label>All KE Brands</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_KE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_MA_Brands</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Brand_Code__c</columns>
        <columns>EUR_CRM_Category_Name__c</columns>
        <columns>EUR_CRM_Is_Competitor__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Brand__c.EUR_MA_Brand</value>
        </filters>
        <label>All MA Brands</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_MA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_NG_Brands</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Brand_Code__c</columns>
        <columns>EUR_CRM_Category_Name__c</columns>
        <columns>EUR_CRM_Is_Competitor__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Brand__c.EUR_NG_Brand</value>
        </filters>
        <label>All NG Brands</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_NG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_ZA_Brands</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Brand_Code__c</columns>
        <columns>EUR_CRM_Category_Name__c</columns>
        <columns>EUR_CRM_Is_Competitor__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Brand__c.EUR_ZA_Brand</value>
        </filters>
        <label>All ZA Brands</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_ZA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_AO_Brands_All</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Brand_Code__c</columns>
        <columns>EUR_CRM_Category_Name__c</columns>
        <columns>EUR_CRM_Is_Competitor__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Brand__c.EUR_AO_Brand</value>
        </filters>
        <label>All AO Brands</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_AO</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_All_DE</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Category_Name__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Is_Competitor__c</columns>
        <columns>EUR_CRM_Is_Ancillary_Product_Item__c</columns>
        <columns>EUR_CRM_Active__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Brand__c.EUR_DE_Brand</value>
        </filters>
        <label>All DE Brands</label>
        <language>en_US</language>
        <sharedTo>
            <role>EMEA</role>
            <role>EUR_DE</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_All_RU</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Category_Name__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Is_Competitor__c</columns>
        <columns>EUR_CRM_Is_Ancillary_Product_Item__c</columns>
        <columns>EUR_CRM_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Brand__c.EUR_RU_Brand</value>
        </filters>
        <label>All RU Brands</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_RU</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_BE_Brands</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Brand_Code__c</columns>
        <columns>EUR_CRM_Category__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Active__c</columns>
        <columns>EUR_CRM_Is_Competitor__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Category_Name__c</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>EUR_CRM_Brand_Image_url__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Brand__c.EUR_BE_Brand</value>
        </filters>
        <label>All BE Brands</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_BG_All_Brand_View</fullName>
        <columns>OBJECT_ID</columns>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_Brand_Code__c</columns>
        <columns>EUR_CRM_Category__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Active__c</columns>
        <columns>EUR_CRM_Is_Competitor__c</columns>
        <columns>EUR_CRM_Category_Name__c</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Brand__c.EUR_BG_Brand</value>
        </filters>
        <label>EUR BG Brand</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_DK_Brands_All</fullName>
        <columns>EUR_CRM_Category_Name__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_Category__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Brand_Image_url__c</columns>
        <columns>EUR_CRM_Active__c</columns>
        <columns>EUR_CRM_Is_Competitor__c</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Brand__c.EUR_DK_Brand</value>
        </filters>
        <label>All DK Brands</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DK</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_EE_Brands_All</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Brand_Code__c</columns>
        <columns>EUR_CRM_Brand_Description__c</columns>
        <columns>EUR_CRM_Category_Name__c</columns>
        <columns>EUR_CRM_Is_Competitor__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All EE Brands</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_EE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_GB_Brands_All</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Brand_Code__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Category_Name__c</columns>
        <columns>EUR_CRM_Is_Competitor__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Brand__c.EUR_GB_Brand</value>
        </filters>
        <label>All GB Brands</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_GB</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Brand Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brands (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_AO_Brand</fullName>
        <active>true</active>
        <label>EUR AO Brand</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_AT_Brand</fullName>
        <active>true</active>
        <label>EUR AT Brand</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BE_Brand</fullName>
        <active>true</active>
        <label>EUR BE Brand</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_Brand</fullName>
        <active>true</active>
        <label>EUR BG Brand</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CH_Brand</fullName>
        <active>true</active>
        <label>EUR CH Brand</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_Brand</fullName>
        <active>true</active>
        <label>EUR DE Brand</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_Brand</fullName>
        <active>true</active>
        <description>Record Type for DK Brands</description>
        <label>EUR DK Brand</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_EE_Brand</fullName>
        <active>true</active>
        <label>EUR EE Brand</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_FI_Brand</fullName>
        <active>true</active>
        <label>EUR FI Brand</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_GB_Brand</fullName>
        <active>true</active>
        <label>GB Brand</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_KE_Brand</fullName>
        <active>true</active>
        <label>EUR KE Brand</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_LT_Brand</fullName>
        <active>true</active>
        <label>EUR LT Brand</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_LV_Brand</fullName>
        <active>true</active>
        <label>EUR LV Brand</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_MA_Brand</fullName>
        <active>true</active>
        <label>EUR MA Brand</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_NG_Brand</fullName>
        <active>true</active>
        <label>EUR NG Brand</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PRT_Brand</fullName>
        <active>true</active>
        <label>EUR_PRT_Brand</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PT_Brand</fullName>
        <active>true</active>
        <label>EUR PT Brand</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_Brand</fullName>
        <active>true</active>
        <label>EUR RU Brand</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ZA_Brand</fullName>
        <active>true</active>
        <label>EUR ZA Brand</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>